--- a/src/styles/components/IVueDatePickerMonth.scss
+++ b/src/styles/components/IVueDatePickerMonth.scss
@@ -10,7 +10,8 @@ $name: 'ivue-date-picker-month';
       }
       &--table {
             td {
-                  position: relative; // width: 33.333333%;
+                  position: relative; 
+                  /* width: 33.333333%;*/
                   height: 56px;
                   vertical-align: middle;
                   text-align: center;
