--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -23,7 +23,7 @@ $border-color: #dcdee2;
 $border-multiple-color: #e8eaec;
 $legend-color: #999;
 $title-color:#17233d;
-$accent-color: rgba(0,0,0,.87);
+$accent-color: rgba(0, 0, 0, .87);
 // cursor
 $cursor-disabled: not-allowed;
 // input
@@ -42,7 +42,5 @@ $font-small-size: 12px;
 $font-base-size: 14px;
 // progress
 $progress-bg: #f3f3f3;
-
 // radius
 $border-radius-small: 4px;
-
