--- a/src/components/ivue-layout/mixins.scss
+++ b/src/components/ivue-layout/mixins.scss
@@ -143,7 +143,7 @@
       }
       /*下右*/
       &.ivue-alignment-bottom-right {
-            justify-content: right;
+            justify-content: flex-end;
             align-items: flex-end;
       }
       /*下两侧*/
