--- a/src/styles/components/IVueListItem.scss
+++ b/src/styles/components/IVueListItem.scss
@@ -1,16 +1,34 @@
-.ivue-list-item {
+$name: 'ivue-list-item';
+
+
+.#{$name} {
       position: relative;
       height: auto;
       z-index: 2;
       list-style: none;
-      
       .ivue-icon {
             margin: 0;
             transition-property: color, margin-right;
       }
+      &-text {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            overflow: hidden;
+            line-height: 1.25em;
+            white-space: nowrap;
+            & * {
+                  width: 100%;
+                  margin: 0;
+                  overflow: hidden;
+                  line-height: 1.25em;
+                  text-overflow: ellipsis;
+            }
+      }
 }
 
-.ivue-list-item-container {
+.#{$name}-container {
       width: 100%;
       font-size: 16px;
       font-weight: 400;
@@ -26,12 +44,12 @@
       }
 }
 
-.ivue-list-item-link,
-.ivue-list-item-router {
+.#{$name}-link,
+.#{$name}-router {
       color: #000;
 }
 
-.ivue-list-item-content {
+.#{$name}-content {
       min-height: 48px;
       padding: 4px 16px;
       display: -webkit-box;
@@ -44,7 +62,7 @@
       will-change: padding;
 }
 
-.ivue-list-item-expand {
+.#{$name}-expand {
       border-top: 1px solid transparent;
       border-bottom: 1px solid transparent;
       transition: border $ivue-transition-stand;
@@ -59,7 +77,7 @@
             will-change: transform, opacity;
       }
       &.ivue-active {
-            border-color: rgba(0,0,0,0.12);
+            border-color: rgba(0, 0, 0, 0.12);
             .ivue-list-expand-icon {
                   perspective: 1000px;
                   perspective-origin: 50% 50%;
