--- a/src/styles/components/IVueSwitch.scss
+++ b/src/styles/components/IVueSwitch.scss
@@ -1,7 +1,10 @@
 $name: 'ivue-switch';
+$defailt-width: 44px;
 $defailt-after-width: 20px;
-$small-after-width: 14px;
-$large-after-width: 28px;
+$small-after-width: $defailt-after-width - 6;
+$large-after-width: $defailt-after-width+6;
+$large-height : ($defailt-after-width * 3 / 2);
+
 @mixin transition() {
       transition: transform .2s ease-in-out 0s, width .25s ease-in-out 0s;
       will-change: transform, width;
@@ -10,8 +13,8 @@ $large-after-width: 28px;
 .#{$name} {
       position: relative;
       display: inline-block;
-      width: 44px;
-      height: 22px;
+      width: $defailt-width;
+      height: $defailt-width / 2;
       line-height: $defailt-after-width;
       border-radius: 22px;
       vertical-align: middle;
@@ -107,7 +110,7 @@ $large-after-width: 28px;
             }
             &.#{$name}-large:active:after {
                   width: $large-after-width;
-                  transform: translate3d(26px, 0, 0) !important;
+                  transform: translate3d($large-height + 2, 0, 0) !important;
             }
       }
       /*小*/
@@ -144,8 +147,8 @@ $large-after-width: 28px;
       }
       /*大*/
       &-large {
-            width: 56px;
-            height: 30px;
+            width: $defailt-after-width * 3;
+            height: $large-height - 2;
             &:active:after {
                   width: 36px;
                   @include transition;
@@ -155,17 +158,20 @@ $large-after-width: 28px;
                   height: $large-after-width;
             }
             &.#{$name}-checked:after {
-                  transform: translate3d($large-after-width - 2, 0, 0);
+                  transform: translate3d($large-height + 2, 0, 0);
             }
             &.#{$name}-checked:before {
-                  left: $large-after-width;
-                  width: 24px;
-                  height: 24px;
+                  left: $large-height + 4;
+                  width: $large-after-width - 4;
+                  height: $large-after-width - 4;
+            }
+            .#{$name}-inner {
+                  transform: translate3d($large-after-width , 0, 0);
             }
       }
       &-large:active {
             &.#{$name}-checked:after {
-                  transform: translate3d(18px, 0, 0);
+                  transform: translate3d($large-after-width - 4, 0, 0);
             }
       }
       /*检查*/
