--- a/src/styles/components/IVueButton.scss
+++ b/src/styles/components/IVueButton.scss
@@ -11,7 +11,7 @@ $name: 'ivue-button';
       background: transparent;
       border: 0;
       border-radius: 0;
-      transition: $ivue-transition-default;
+      transition: $ivue-transition-default, color 1ms;
       font-family: inherit;
       line-height: normal;
       text-decoration: none;
