--- a/src/styles/components/IVueTabs.scss
+++ b/src/styles/components/IVueTabs.scss
@@ -22,6 +22,32 @@ $name: 'ivue-tabs';
             list-style-type: none;
             white-space: nowrap;
             transition: transform .6s cubic-bezier(.86, 0, .07, 1);
+            &--fixed-tabs {
+                  .#{$name}-tab {
+                        min-width: 72px;
+                        &:first-child {
+                              margin-left: auto;
+                        }
+                        &:last-child {
+                              margin-right: auto
+                        }
+                  }
+                  @media only screen and (min-width: 600px) {
+                        .#{$name}-tab {
+                              min-width: 160px;
+                        }
+                  }
+                  .#{$name}-slider-wrapper+.#{$name}-tab {
+                        margin-left: auto
+                  }
+                  .#{$name}-tab {
+                        justify-content: center;
+                        user-select: none;
+                        white-space: normal;
+                        text-align: center;
+                        vertical-align: middle;
+                  }
+            }
       }
       &-container--centered &-slider-wrapper+&-tab {
             margin-left: auto;
@@ -43,7 +69,7 @@ $name: 'ivue-tabs';
       }
       &-tab {
             position: relative;
-            padding: 8px 16px;
+            padding: 6px 12px;
             align-items: center;
             display: inline-flex;
             flex: 0 1 auto;
@@ -54,7 +80,8 @@ $name: 'ivue-tabs';
             cursor: pointer;
             text-decoration: none;
             transition: color $ivue-transition-default;
-            color: rgba(255, 255, 255, .7);
+            color: rgb(255, 255, 255);
+            opacity: .7;
             font-weight: 500;
             font-size: 14px;
             &-disabled {
@@ -62,6 +89,7 @@ $name: 'ivue-tabs';
                   color: $disabled-color;
             }
             &-active {
+                  opacity: 1;
                   color: #fff;
             }
       }
@@ -94,6 +122,7 @@ $name: 'ivue-tabs';
             cursor: pointer;
             width: 32px;
             color: #fff;
+            transition: $ivue-transition-default;
             &--prev {
                   left: 4px;
             }
