--- a/src/styles/components/index.scss
+++ b/src/styles/components/index.scss
@@ -30,4 +30,6 @@
 @import "IvueDatePickerDate";
 @import "IvueDatePickerMonth";
 @import "IvueDatePickerYears";
-@import "IvueVirtualCollection"
+@import "IvueVirtualCollection";
+@import "IvueCollapse";
+
