--- a/src/styles/components/IvueVirtualCollection.scss
+++ b/src/styles/components/IvueVirtualCollection.scss
@@ -8,6 +8,10 @@ $name: 'ivue-virtual-collection';
       .cell-container {
             position: absolute;
             top: 0;
-            will-change: transform, top
+            will-change: transform, top;
+            /*设置内嵌的元素在 3D 空间如何呈现：保留 3D*/
+            -webkit-transform-style: preserve-3d;
+            /*（设置进行转换的元素的背面在面对用户时是否可见：隐藏）*/
+            -webkit-backface-visibility: hidden;
       }
 }
