--- a/src/styles/components/IvueCascader.scss
+++ b/src/styles/components/IvueCascader.scss
@@ -1,2 +1,144 @@
 $name: 'ivue-cascader';
-.#{$name} {}
+$input: 'ivue-input';
+.#{$name} {
+    position: relative;
+    font-size: $font-small-size;
+    width: 100%;
+    /* 输入框 */
+    &-selection-default {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        border: 1px solid #dcdee2;
+        .#{$input}-wrapper {
+            height: $input-height-base;
+            .#{$input} {
+                cursor: pointer;
+                border: none;
+                height: $input-height-base;
+            }
+        }
+        &:hover {
+            border-color: transparentize($primary-color, 0.2);
+        }
+    }
+    &-selection {
+        display: block;
+        position: relative;
+        box-sizing: border-box;
+        outline: none;
+        user-select: none;
+        border-radius: $border-radius-small;
+        background-color: #fff;
+        min-height: 32px;
+        cursor: pointer;
+        transition: all .2s ease-in-out;
+    }
+    /* 显示菜单 */
+    &-visible {
+        .#{$input}-selection {
+            border-color: transparentize($primary-color, 0.2);
+            outline: 0;
+            box-shadow: 0 0 0 2px transparentize($primary-color, 0.8);
+        }
+        .#{$input}-arrow {
+            transform: rotate(180deg);
+            transform-origin: center center;
+        }
+    }
+    /* 显示的文字 */
+    &-label {
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        padding: 0 32px 0 7px;
+        color: #606266;
+        line-height: $input-height-base;
+        width: 100%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        box-sizing: border-box;
+        cursor: pointer;
+        text-align: left;
+        font-size: inherit;
+        border-radius: $border-radius-small;
+        transition: all .2s ease-in-out;
+        &:hover {
+            border-color: transparentize($primary-color, 0.2);
+        }
+    }
+    /* 菜单 */
+    &-menus {
+        position: absolute;
+        margin: 5px 0;
+        white-space: nowrap;
+        z-index: 2;
+        border: 1px solid #e4e7ed;
+        border-radius: 2px;
+        box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
+        background: #fff;
+        /* 箭头 */
+        &-popper {
+            margin-top: 12px;
+            .popper-arrow,
+            .popper-arrow::after {
+                position: absolute;
+                display: block;
+                width: 0;
+                height: 0;
+                border-color: transparent;
+                border-style: solid;
+            }
+            .popper-arrow {
+                left: 35px;
+                margin-right: 3px;
+                border-width: 6px;
+                top: -6px;
+                width: 0px;
+                height: 0px;
+                border-top-width: 0px;
+                border-bottom-color: #ebeef5;
+                filter: drop-shadow(rgba(0, 0, 0, 0.03) 0px 2px 12px);
+            }
+            .popper-arrow::after {
+                content: " ";
+                border-width: 6px;
+                top: 1px;
+                margin-left: -6px;
+                border-top-width: 0;
+                border-bottom-color: #fff;
+            }
+        }
+    }
+    &-menu {
+        display: inline-block;
+        vertical-align: top;
+        height: 204px;
+        overflow: auto;
+        border-right: 1px solid #e4e7ed;
+        background-color: #fff;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 6px 0;
+        min-width: 160px;
+        &:last-child {
+            border-right: 0;
+        }
+    }
+}
+
+.#{$name}-menu-enter-active,
+.#{$name}-menu-leave-active {
+    opacity: 1;
+    transform: scaleY(1);
+    transition: transform .3s cubic-bezier(0.23, 1, 0.32, 1), opacity .3s cubic-bezier(0.23, 1, 0.32, 1);
+    transform-origin: center top;
+}
+
+.#{$name}-menu-enter,
+.#{$name}-menu-leave-active {
+    opacity: 0;
+    transform: scaleY(0);
+}
