--- a/src/styles/components/IvueCascader.scss
+++ b/src/styles/components/IvueCascader.scss
@@ -140,6 +140,7 @@ $input: 'ivue-input';
             font-size: 14px;
             box-sizing: border-box;
             cursor: pointer;
+            outline: none;
             &:hover {
                 background-color: #f5f7fa;
             }
