--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -24,6 +24,9 @@ $border-multiple-color: #e8eaec;
 $legend-color: #999;
 $title-color:#17233d;
 $accent-color: rgba(0, 0, 0, .87);
+$white-color:#fff;
+$label-color: #606266;
+$popper-color: #ebeef5;
 // cursor
 $cursor-disabled: not-allowed;
 // input
@@ -44,3 +47,5 @@ $font-base-size: 14px;
 $progress-bg: #f3f3f3;
 // radius
 $border-radius-small: 4px;
+// extensible
+$extensible-color: #bfcbd9;
