--- a/src/styles/components/IvueCascader.scss
+++ b/src/styles/components/IvueCascader.scss
@@ -118,6 +118,7 @@ $input: 'ivue-input';
         }
     }
     &-menu {
+        position: relative;
         display: inline-block;
         vertical-align: top;
         height: 204px;
@@ -131,6 +132,13 @@ $input: 'ivue-input';
         &:last-child {
             border-right: 0;
         }
+        &--isFlat {
+            height: auto;
+            max-height: 180px;
+            overflow: auto;
+        }
+        /* loading */
+        &--loading {}
         /* 菜单选项 */
         &--item {
             position: relative;
@@ -158,6 +166,10 @@ $input: 'ivue-input';
                     font-size: 18px;
                     color: $extensible-color;
                 }
+            }
+            /* 关键字 */
+            &---keyword {
+                font-weight: 700;
             }
         }
         /* 是否激活 */
