--- a/src/styles/components/IVueRipple.scss
+++ b/src/styles/components/IVueRipple.scss
@@ -1,31 +1,45 @@
 .ivue-ripple {
-      width: 100%;
-      height: 100%;
-      position: relative;
-      z-index: 10;
-      overflow: hidden;
-      -webkit-mask-image: radial-gradient(circle, #fff 100%, #000 100%);
-      box-sizing: border-box;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    box-sizing: border-box;
+    color: inherit;
+    border-radius: inherit;
+    -webkit-mask-image: radial-gradient(circle, #fff 100%, #000 100%);
+    overflow: hidden;
+    z-index: 0;
+    pointer-events: none;
+    contain: strict;
 }
 
 .ivue-ripple-wave {
-      position: absolute;
-      z-index: 1;
-      pointer-events: none;
-      background: currentColor;
-      border-radius: 50%;
-      opacity: 0;
-      transform: scale(2) translateZ(0);
-      width: 100%;
-      height: 100%;
-  
-      &.ivue-centered {
-            animation-duration: 1.2s;
-            top: 50%;
-            left: 50%;
-      }
-      ~*:not(.ivue-ripple-wave) {
-            position: relative;
-            z-index: 2;
-      }
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    background: currentColor;
+    opacity: 0;
+    pointer-events: none;
+    overflow: hidden;
+    will-change: transform, opacity;
+    &--enter {
+        transition: none;
+    }
+    &--in {
+        transition: transform .25s cubic-bezier(0.4, 0.0, 0.2, 1), opacity .1s cubic-bezier(0.4, 0.0, 0.2, 1);
+    }
+    &--out {
+        transition: opacity .3s cubic-bezier(0.4, 0.0, 0.2, 1);
+    }
+    &.ivue-centered {
+        animation-duration: 1.2s;
+        top: 50%;
+        left: 50%;
+    }
+    ~*:not(.ivue-ripple-wave) {
+        position: relative;
+        z-index: 2;
+    }
 }
