--- a/src/styles/components/IVueButton.scss
+++ b/src/styles/components/IVueButton.scss
@@ -1,6 +1,7 @@
 @import "../../styles/animation/variables";
 @import "../../components/ivue-elevation/mixins";
 $name: 'ivue-button';
+
 .#{$name}-clean {
     margin: 0;
     padding: 0;
@@ -36,10 +37,12 @@ $name: 'ivue-button';
     font-size: $ivue-button-font-size;
     font-weight: 500;
     color: currentColor;
+
     &-content {
         position: relative;
         z-index: 2;
     }
+
     &-ripple {
         display: flex;
         justify-content: center;
@@ -52,33 +55,53 @@ $name: 'ivue-button';
         -webkit-mask-image: radial-gradient(circle, #fff 100%, #000 0);
         box-sizing: border-box;
     }
+
     &:active {
         outline: none;
     }
+
     &[disabled] {
         color: rgba(0, 0, 0, .26);
         pointer-events: none;
     }
-    &:not([disabled]) {
-        cursor: pointer;
-        -webkit-tap-highlight-color: transparent;
-        &:hover,
-        &:active {
-            &:before {
-                background-color: currentColor;
-                opacity: .12;
+
+    @media screen and (min-width: 800px) {
+        &:not([disabled]) {
+            cursor: pointer;
+            -webkit-tap-highlight-color: transparent;
+
+            &:hover,
+            &:active {
+                &:before {
+                    background-color: currentColor;
+                    opacity: .12;
+                }
             }
-        }
-        &:active {
-            &:before {
-                opacity: .2;
+
+            &:active {
+                &:before {
+                    opacity: .2;
+                }
             }
         }
     }
+
+    @media screen and (max-width: 800px) {
+        &:not([disabled]) {
+            &:hover {
+                &:before {
+                    background-color: transparent;
+                    opacity: .12;
+                }
+            }
+        }
+    }
+
     &::-moz-focus-inner {
         padding: 0;
         border: 0;
     }
+
     &:before {
         position: absolute;
         top: 0;
@@ -91,39 +114,47 @@ $name: 'ivue-button';
         will-change: background-color, opacity;
         content: " ";
     }
+
     &.#{$name}--raised:not(.#{$name}--depressed):not(.#{$name}--flat):not([disabled]) {
         will-change: box-shadow;
         @include ivue-elevation(2);
+
         &:active {
             @include ivue-elevation(8);
         }
     }
-    &.ivue-button--raised[disabled],
-        {
+
+    &.ivue-button--raised[disabled] {
         background-color: rgba(0, 0, 0, .12);
     }
+
     +.ivue-button {
         margin-left: 0;
     }
+
     .ivue-ripple {
         padding: 0 8px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     &--selected {
         color: #fff !important;
         background: currentColor;
     }
+
     &--current {
         border: 1px solid;
         border-color: currentColor !important;
     }
+
     &--outline {
         border: 1px solid currentColor;
         background: transparent !important;
         box-shadow: none;
     }
+
     &--readonly {
         border-color: transparent !important;
         background-color: rgba(0, 0, 0, 0.12) !important;
@@ -141,15 +172,19 @@ $name: 'ivue-button';
     height: $ivue-button-icon-size;
     margin: 0 6px;
     border-radius: 50%;
+
     &::before {
         border-radius: 50%;
     }
+
     .ivue-ripple {
         border-radius: 50%;
     }
+
     .ivue-ripple-enter-active {
         transition-duration: 1.2s;
     }
+
     .ivue-ripple-wave {
         top: 0 !important;
         right: 0 !important;
