--- a/src/styles/components/IvueTooltip.scss
+++ b/src/styles/components/IvueTooltip.scss
@@ -1,13 +1,64 @@
 $name: 'ivue-tooltip';
+$popover-arrow-size: 6px;
 
 .#{$name} {
     position: absolute;
-    border-radius: 4px;
-    padding: 10px;
+    border-radius: 2px;
+    padding: 5px 8px;
     z-index: 2000;
     font-size: 12px;
     line-height: 1.2;
     min-width: 10px;
     word-wrap: break-word;
-    background: red;
+    color: #fff;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+    @media screen and (max-width: 800px) {
+        padding: 9px 16px;
+    }
+
+    /* 提示圆角 */
+    &-rounded{
+        border-radius: 50px;
+    }
+
+    /* 箭头 */
+    &-popper--arrow {
+        border-width: 6px;
+        filter: drop-shadow(0 2px 12px rgba(0, 0, 0, 0.03));
+
+        &::after {
+            content: " ";
+            border-width: 6px;
+        }
+    }
+
+    &-popper--arrow,
+    &-popper--arrow::after {
+        position: absolute;
+        display: block;
+        width: 0;
+        height: 0;
+        border-color: transparent;
+        border-style: solid;
+    }
+
+    &[x-direction^="bottom"] {
+        margin-bottom: #{$popover-arrow-size + 6};
+    }
+
+    &[x-direction^="bottom"] .#{$name}-popper--arrow {
+        top: -$popover-arrow-size;
+        left: 50%;
+        margin-right: #{$popover-arrow-size / 2};
+        border-top-width: 0;
+        border-bottom-color: currentColor;
+
+        &::after {
+            top: 1px;
+            margin-left: -$popover-arrow-size;
+            border-top-width: 0;
+            border-bottom-color: currentColor;
+        }
+    }
 }
