--- a/src/styles/components/IvueTooltip.scss
+++ b/src/styles/components/IvueTooltip.scss
@@ -2,23 +2,53 @@ $name: 'ivue-tooltip';
 $popover-arrow-size: 6px;
 
 .#{$name} {
-    position: absolute;
-    border-radius: 2px;
-    padding: 5px 8px;
-    z-index: 2000;
-    font-size: 12px;
-    line-height: 1.2;
-    min-width: 10px;
-    word-wrap: break-word;
-    color: #fff;
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    display: inline-block;
 
-    @media screen and (max-width: 800px) {
-        padding: 9px 16px;
+    /* slot元素 */
+    &-reference {
+        display: inline-block;
+        position: relative;
+        width: inherit;
+    }
+
+    &-popper {
+        position: absolute;
+        border-radius: 2px;
+        padding: 5px 8px;
+        z-index: 2000;
+        font-size: 12px;
+        line-height: 1.2;
+        min-width: 10px;
+        word-wrap: break-word;
+        color: #fff;
+        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+        @media screen and (max-width: 800px) {
+            padding: 9px 16px;
+        }
+
+        &[x-direction^="bottom"] {
+            margin-top: #{$popover-arrow-size + 6};
+        }
+
+        &[x-direction^="bottom"] .#{$name}-popper--arrow {
+            top: -$popover-arrow-size;
+            left: 50%;
+            margin-right: #{$popover-arrow-size / 2};
+            border-top-width: 0;
+            border-bottom-color: currentColor;
+
+            &::after {
+                top: 1px;
+                margin-left: -$popover-arrow-size;
+                border-top-width: 0;
+                border-bottom-color: currentColor;
+            }
+        }
     }
 
     /* 提示圆角 */
-    &-rounded{
+    &-rounded {
         border-radius: 50px;
     }
 
@@ -43,22 +73,5 @@ $popover-arrow-size: 6px;
         border-style: solid;
     }
 
-    &[x-direction^="bottom"] {
-        margin-bottom: #{$popover-arrow-size + 6};
-    }
 
-    &[x-direction^="bottom"] .#{$name}-popper--arrow {
-        top: -$popover-arrow-size;
-        left: 50%;
-        margin-right: #{$popover-arrow-size / 2};
-        border-top-width: 0;
-        border-bottom-color: currentColor;
-
-        &::after {
-            top: 1px;
-            margin-left: -$popover-arrow-size;
-            border-top-width: 0;
-            border-bottom-color: currentColor;
-        }
-    }
 }
