--- a/src/styles/components/IvueChip.scss
+++ b/src/styles/components/IvueChip.scss
@@ -18,6 +18,11 @@ $name: 'ivue-chip';
         border-radius: 2px;
     }
 
+    .ivue-icon {
+        margin-left: -6px;
+        margin-right: 8px;
+    }
+
     /* 获取焦点 */
     &:focus:not(.ivue-chip--disabled) {
         box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
@@ -91,6 +96,7 @@ $name: 'ivue-chip';
             font-size: 20px;
             cursor: pointer;
             opacity: 0.5;
+            margin: 0;
         }
     }
 
