--- a/src/styles/components/IvueRadio.scss
+++ b/src/styles/components/IvueRadio.scss
@@ -11,9 +11,28 @@ $ease-in-out: ease-in-out;
     line-height: 1;
     cursor: pointer;
 
+    /* 组合 */
+    &-group {
+        display: inline-block;
+        vertical-align: middle;
+
+        .#{$name}-wrapper {
+            margin-right: 8px;
+        }
+
+        /* 垂直 */
+        &-vertical {
+            .#{$name}-wrapper {
+                display: block;
+                height: 30px;
+                line-height: 30px;
+            }
+        }
+    }
+
     &:hover {
         .#{$name}-inner {
-            border-color: #bcbcbc;
+            border-color: currentColor;
         }
     }
 
@@ -45,9 +64,32 @@ $ease-in-out: ease-in-out;
             border-top: 0;
             border-left: 0;
             opacity: 0;
-            background-color: $primary-color;
+            background-color: currentColor;
             transition: all $transition-time $ease-in-out;
             transform: scale(0);
+            z-index: 2;
+        }
+    }
+
+    /* 焦点 */
+    &-focus {
+        &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            display: table;
+            border-top: 0;
+            border-left: 0;
+            opacity: 0.2;
+            transition: all $transition-time $ease-in-out;
+            box-shadow: 0 0 0 2px currentColor;
+            z-index:1;
         }
     }
 
@@ -59,6 +101,11 @@ $ease-in-out: ease-in-out;
         white-space: nowrap;
         cursor: pointer;
         font-size: $font-small-size;
+
+        /* 禁用 */
+        &-disabled {
+            cursor: not-allowed;
+        }
     }
 
     /* 输入框 */
@@ -76,7 +123,7 @@ $ease-in-out: ease-in-out;
     /* 激活 */
     &-checked {
         .#{$name}-inner {
-            border-color: $primary-color;
+            border-color: currentColor;
 
             &::after {
                 opacity: 1;
@@ -87,7 +134,32 @@ $ease-in-out: ease-in-out;
 
         &:hover {
             .#{$name}-inner {
-                border-color: $primary-color;
+                border-color: currentColor;
+            }
+        }
+    }
+
+    /* 禁用 */
+    &-disabled {
+        cursor: $cursor-disabled;
+
+        .#{$name}-inner {
+            border-color: #d7dde4;
+            background-color: #f3f3f3;
+
+            &::after {
+                background-color: $disabled-color;
+            }
+
+        }
+
+        .#{$name}-input {
+            cursor: $cursor-disabled;
+        }
+
+        &:hover {
+            .#{$name}-inner {
+                border-color: #d7dde4;
             }
         }
     }
