add checkbox component

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -49,3 +49,5 @@ $progress-bg: #f3f3f3;
 $border-radius-small: 4px;
 // extensible
 $extensible-color: #bfcbd9;
+// trantition
+$ease-in-out: ease-in-out;
