--- a/examples/index.scss
+++ b/examples/index.scss
@@ -1,5 +1,3 @@
-@import 'ivue-material/src/styles/custom.scss';
-@import 'ivue-material/src/styles/mixins.scss';
-@import 'ivue-material/src/styles/theme/index.scss';
-@import 'ivue-material/src/styles/components/IVueButton.scss';
-@import 'ivue-material/src/styles/components/IVueRipple.scss';
+@import '../src/styles/custom.scss';
+@import '../src/styles/mixins.scss';
+@import '../src/styles/theme/index.scss';
