--- a/src/styles/components/IvueAvatar.scss
+++ b/src/styles/components/IvueAvatar.scss
@@ -12,5 +12,29 @@ $name: 'ivue-avatar';
     width: 32px;
     height: 32px;
     line-height: 32px;
-    border-radius: 16px;
+
+    /* 图片 */
+    &-img {
+        width: 100%;
+        height: 100%;
+    }
+
+    /* slot */
+    &-text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    /* 圆形 */
+    &-circle {
+        border-radius: 50%;
+    }
+
+    /* 正方形 */
+    &-square {
+        border-radius: 4px;
+    }
 }
