--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -10,7 +10,7 @@ $ivue-button-icon-size: 40px;
 // icon
 $icon-size: 24px;
 // color
-$primary-color: #4177F6;
+$primary-color: #4177f6;
 $success-color:#19be6b;
 $warning-color:#F90;
 $error-color: #ed4014;
